--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,73 @@
 <%- include("layout/header") %>
+
     <main>
-        <h1>Welcome to About  page</h1>
+        <div class="main-container">
+            <div class="about-top">
+                <p>
+                    Remember the days when you couldn’t find the proper translation of an English word to the Uzbek language? I also know those feelings when you run against the lack of general use dictionaries - not to mention the specialized ones, a total absence of online resources in Uzbek, a pre-requisite of knowing the Russian language in order to apply indirect translation (EN RU UZ and vice versa).
+                </p>
+            </div>
+            <div class="book-edition about-common">
+                <div>
+                    <h3>Book edition</h3>
+                </div>
+                <div>
+                    <p class="about-p">
+                        To reverse the situation, it was decided to compile a large English-Uzbek-English dictionary and the work started back in 2003. 2 years later, the first edition of the bilingual dictionary was published in G’afur G’ulom publishing house; it is still available for sale online. Much attention was directed to the Uzbek-English part; even now, it is the most comprehensive and complete UZ-EN dictionary.
+A mobile app for Android devices was launched based on the dictionary with ma jor update of the lexical database.
+                    </p>
+                </div>
+            </div>
+            <div class="web-dic about-common">
+                <div>
+                    <h3>Website dictionary</h3>
+                </div>
+                <div>
+                    <p class="about-p">
+                        However, we still desperately needed a high-quality online dictionary for English-Uzbek language pair that could cover both everyday and area-specific vocabulary. In September 2022, on the date of 31th anniversary of Independence of Uzbekistan, Leksika.uz was successfully launched.
+Leksika.uz has mainly been designed to give English learners of any level the help they need to read, speak and write English more effectively. It is also intended to assist translators and localizers by providing useful tips and rules of thumb; these can be found in Localization section.
+                    </p>
+                </div>
+            </div>
+            <div class="prospect about-common">
+                <div>
+                    <h3>Prospects</h3>
+                </div>
+                <div>
+                    <ul>
+                        <li>Russian-Uzbek-Russian dictionary section with largest database on the web;</li>
+                        <li>content for easier learning of English, including grammar, writing tips, learning new words;</li>
+                        <li>useful tips and motivational articles for freelancers;</li>
+                        <li>articles for localizers to Uzbek language, including intricacies of Uzbek grammar;</li>
+                        <li>and much more.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="our-team about-common">
+                <div>
+                    <h3>Our team</h3>
+                </div>
+                <div class="card-main-about">
+                    <div class="about-card1 about-card">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQrxkjhbA72vPFCIv0-5EVzU14wUAN2is2APw&usqp=CAU
+                        " alt="img/prof1.jpg">
+                        <div class="card-text">
+                            <h4>Yuji Itadori</h4>
+                            <hr>
+                            <p>Team member</p>
+                        </div>
+                    </div>
+                    <div class="about-card2 about-card">
+                        <img src="https://www.profilebakery.com/wp-content/uploads/2023/04/AI-Profile-Picture.jpg" alt="img/prof2.jpg">
+                        <div class="card-text">
+                            <h4>Nobara Kugisaki</h4>
+                            <hr>
+                            <p>Team member</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+
     <%- include("layout/footer") %>
