--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,8 @@
 }
 body{
     background-color: #F1F4F6;
+    position: relative;
+    height: 100%;
 }
 
 nav{
@@ -95,3 +97,81 @@ form{
  } form button:hover{
     cursor: pointer;
  }
+.resuly-box p{
+    color: #000;
+    max-width: 37.875rem;
+    width: 100%;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+/* // About // */
+.main-container{
+    padding: 5rem;
+}
+
+.about-top{
+    color: #000;
+    max-width: 52.875rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1.125rem;
+    font-weight: 400;
+    margin:  0 auto  3.75rem auto;
+}
+
+.about-common{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 3.75rem
+}
+.about-p{
+    color: #000;
+    max-width: 52.875rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    text-align: justify;
+}
+
+.prospect :last-child{
+    max-width: 52.875rem;
+    width: 100%;
+    padding-left: .6rem;
+}
+.main-container h3{
+    color: #01756C;
+}
+.about-card{
+    max-width: 26.875rem;
+    width: 100%;
+    height: fit-content;
+    border-radius: 1.125rem;
+    background: var(--white-color, #FFF);
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+}
+.about-card img{
+  width: 100%;
+}
+.card-main-about{
+    display: flex;
+    justify-content: space-around;
+    gap: 2rem;
+}
+hr{
+    width: 4rem;
+}
+.card-text{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 1.88rem 4.24rem;
+
+
+}
