--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <%- include("layout/header") %>
-    <main>
+   
+<main>
         <form action="/" method="post">
             <div class="input-container">
                 <button class="btn-res">
@@ -9,7 +10,8 @@
             </div>
         </form>
         <div class="result-box">
-
+            <p>Search any words, and we found this word defination, translation and etc.</p>
         </div>
-    </main>
-    <%- include("layout/footer") %>
+</main>
+
+<%- include("layout/footer") %>
