--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,177 +1,176 @@
- @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;700&display=swap");
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: Poppins;
- 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Poppins;
 }
-body{
-    background-color: #F1F4F6;
-    position: relative;
-    height: 100%;
+body {
+  background-color: #eaf7f0;
+  min-height: 100vh;
+  position: relative;
 }
 
-nav{
-    height: 6.25rem;
-    width: 100%;
-    background-color: #01756C;
-    padding: 2.30rem 5.5rem;
-    display: flex;
-    justify-content: space-between;
+nav {
+  height: 6.25rem;
+  width: 100%;
+  background-color: #01756c;
+  padding: 2.3rem 5.5rem;
+  display: flex;
+  justify-content: space-between;
 }
-nav span a{
-    color: #ffffff;
-    font-weight: 700;
-    font-size: 1.4rem;
-    text-decoration: none;
+nav span a {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 1.4rem;
+  text-decoration: none;
 }
 nav ul {
-    display: flex;
-    gap: 5rem;
-    justify-content: flex-end;
+  display: flex;
+  gap: 5rem;
+  justify-content: flex-end;
 }
-nav li{
-    list-style-type: none;
+nav li {
+  list-style-type: none;
 }
 nav li a {
-
-    font-size: 1.125rem;
-    font-style: normal;
-    font-weight: 400;
-    color: #ffffff;
-    text-decoration: none;
+  font-size: 1.125rem;
+  font-style: normal;
+  font-weight: 400;
+  color: #ffffff;
+  text-decoration: none;
 }
 
-footer{
-    display: flex;
-    width: 100%;
-    padding: 2.5rem 5rem;
-    background-color: #01756C;
-    color: #ffffff;
-    position: absolute;
-    bottom: 0;
-}
-
-
-form{
-    position: relative;
-    width: 100%;
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+form {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .input-container {
-    position: relative;
-    width: 55%;
-    margin-top: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  position: relative;
+  width: 55%;
+  margin-top: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
- form input {
-    width: 100%;
-    display: flex;
-    padding: 1.6rem 10rem;
-    align-items: center;
-    box-sizing: border-box;
-    border-radius: 6.25rem;
-    border: none;
-  }
+form input {
+  width: 100%;
+  display: flex;
+  padding: 1.6rem 10rem;
+  align-items: center;
+  box-sizing: border-box;
+  border-radius: 6.25rem;
+  border: none;
+}
 
- form button {
-    position: absolute;
-    left: 6px;
-    display: flex;
-    padding: 1.25rem 2.25rem;
-    align-items: center;
-    gap: 0.75rem;
-    background-color: #01756C;
-    color: #ffffff;
-    border-radius: 6.25rem;
-    border: none ;
- } form button:hover{
-    cursor: pointer;
- }
-.resuly-box p{
-    color: #000;
-    max-width: 37.875rem;
-    width: 100%;
-    text-align: center;
-    font-family: Poppins;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+form button {
+  position: absolute;
+  left: 6px;
+  display: flex;
+  padding: 1.25rem 2.25rem;
+  align-items: center;
+  gap: 0.75rem;
+  background-color: #01756c;
+  color: #ffffff;
+  border-radius: 6.25rem;
+  border: none;
+}
+form button:hover {
+  cursor: pointer;
+}
+.result-box p {
+  color: #000;
+  max-width: 37.875rem;
+  width: 100%;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0 auto;
+}
+.main-box {
 }
 /* // About // */
-.main-container{
-    padding: 5rem;
+.main-container {
+  padding: 5rem;
 }
 
-.about-top{
-    color: #000;
-    max-width: 52.875rem;
-    width: 100%;
-    text-align: center;
-    font-size: 1.125rem;
-    font-weight: 400;
-    margin:  0 auto  3.75rem auto;
+.about-top {
+  color: #000;
+  max-width: 52.875rem;
+  width: 100%;
+  text-align: center;
+  font-size: 1.125rem;
+  font-weight: 400;
+  margin: 0 auto 3.75rem auto;
 }
 
-.about-common{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 3.75rem
+.about-common {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 3.75rem;
 }
-.about-p{
-    color: #000;
-    max-width: 52.875rem;
-    width: 100%;
-    text-align: center;
-    font-size: 1rem;
-    font-weight: 400;
-    text-align: justify;
+.about-p {
+  color: #000;
+  max-width: 52.875rem;
+  width: 100%;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 400;
+  text-align: justify;
 }
 
-.prospect :last-child{
-    max-width: 52.875rem;
-    width: 100%;
-    padding-left: .6rem;
+.prospect :last-child {
+  max-width: 52.875rem;
+  width: 100%;
+  padding-left: 0.6rem;
 }
-.main-container h3{
-    color: #01756C;
+.main-container h3 {
+  color: #01756c;
 }
-.about-card{
-    max-width: 26.875rem;
-    width: 100%;
-    height: fit-content;
-    border-radius: 1.125rem;
-    background: var(--white-color, #FFF);
-    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+.about-card {
+  max-width: 26.875rem;
+  width: 100%;
+  height: fit-content;
+  border-radius: 1.125rem;
+  background: var(--white-color, #fff);
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
 }
-.about-card img{
+.about-card img {
   width: 100%;
 }
-.card-main-about{
-    display: flex;
-    justify-content: space-around;
-    gap: 2rem;
+.card-main-about {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
 }
-hr{
-    width: 4rem;
+hr {
+  width: 4rem;
 }
-.card-text{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
-    padding: 1.88rem 4.24rem;
+.card-text {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 1.88rem 4.24rem;
+}
 
-
+/* Footer */
+footer {
+  display: flex;
+  width: 100%;
+  padding: 2.5rem 5rem;
+  background-color: #01756c;
+  color: #ffffff;
+  position: absolute;
+  bottom: 0;
 }
