--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,24 @@
 <%- include("layout/header") %>
-   
-<main>
-        <form action="/" method="post">
-            <div class="input-container">
-                <button class="btn-res">
 
-                </button>
-                <input type="text" placeholder="Search words here..." name = 'SeachingThisWord'>
-            </div>
-        </form>
-        <div class="result-box">
-            <p>Search any words, and we found this word defination, translation and etc.</p>
-        </div>
+<main>
+  <div class="main-box">
+    <form action="/" method="post">
+      <div class="input-container">
+        <button class="btn-res">ENG <> UZB</button>
+        <input
+          type="text"
+          placeholder="Search words here..."
+          name="SeachingThisWord"
+        />
+      </div>
+    </form>
+    <div class="result-box">
+      <p>
+        Search any words, and we found this word defination, translation and
+        etc.
+      </p>
+    </div>
+  </div>
 </main>
 
 <%- include("layout/footer") %>
